--- a/src/stylesheets/style.sass
+++ b/src/stylesheets/style.sass
@@ -62,19 +62,19 @@ html
     background: transparent
 
 .nav-rect1
-    border: 1.5px solid $color1
-    background-color: $color1
-    padding-top: 1%
+    border: 1.5px solid $color1  !important
+    background-color: $color1  !important
+    padding-top: 1% !important
 .nav-rect2
-    padding-top: 1%
-    padding-bottom: 1%
-    margin: 6px
-    border: 1.5px solid $color1
-    background-color: $color1
+    padding-top: 1%  !important
+    padding-bottom: 1%  !important
+    margin: 6px  !important
+    border: 1.5px solid $color1  !important
+    background-color: $color1  !important
 .nav-rect3
-    padding-bottom: 1%
-    border: 1.5px solid $color1
-    background-color: $color1
+    padding-bottom: 1%  !important
+    border: 1.5px solid $color1  !important
+    background-color: $color1  !important
     //===============================END NAVIGATION OVERLAY BUTTON==================
 
 //=======================================First page of NAVIGATION OF OVERLAY=======
@@ -94,7 +94,7 @@ html
     height: 100%
 .nav-text
     padding-top: 6%
-
+    
 .nav-links a
     display: block
     font-size: 41.89px
@@ -334,11 +334,11 @@ input:focus + label
         display: block
     //=============OVERLAY BUTTON FOR SMALL SCREEN
     .nav-text
-        padding-top: 15%
+        padding-top: 20%
         margin-left: 4%
         margin-right: 4%
     .nav-rect1
-        padding-top: 1%
+        padding-top: 1%  
         margin-left: 40% !important
     .nav-rect2
         padding-top: 0%
@@ -361,7 +361,7 @@ input:focus + label
         display: inline
         font-size: 16px
         line-height: 72px
-        padding: 6%
+        padding: 3%
     .nav-links a:hover
         font-size: 18px
     .nav-mail
@@ -443,4 +443,4 @@ input:focus + label
         display: inline
         font-size: 16px
         line-height: 72px
-        padding: 7%
+        padding: 3%
