--- a/src/stylesheets/about.sass
+++ b/src/stylesheets/about.sass
@@ -1,6 +1,6 @@
 $background-width: 100%
 body
-    background-color: black;
+    background-color: black
 .test
     border: 1px sloid red
 
@@ -38,7 +38,7 @@ body
 .frame-image
     height: 560px
     width: 419px
-    object-fit: cover;
+    object-fit: cover
 
 .frame-subheadings
     font-size: 25.89px !important
@@ -53,7 +53,7 @@ body
 .about_team
     padding-left: 12%
     margin-top: 10%
-    
+
 .team-heading1
     font-size: 16px
     line-height: 28px
@@ -73,7 +73,7 @@ body
     width: 418px
     height: 380px
     border-radius: 0
-    object-fit: cover;
+    object-fit: cover
 .about-member-image-pdng
     margin-left: 40px
 .slide-size
@@ -92,25 +92,24 @@ body
     .about-scroll
         padding-top: 5% !important
     .frames-container
-        padding-left: 6%
+        padding-left: 4%
+
     .about-frame-text
-        padding-left: 6%
+        padding-left: 4%
     .about_team
-        padding-left: 6%
+        padding-left: 4%
     .about_background
         width: 360px
         height: 640px
     .about_quote
         line-height: 64px
     .frame-image
-        width: 312px
         height: 417px
     .frame-text
         font-size: 14px
     .frame-subheadings
         font-size: 24px
     .about-ceo
-        width: 312px
         height: 312px
     .about-member-image
         width: 146px
@@ -124,3 +123,4 @@ body
         visibility: hidden
     .visibilty-sm
         display: block
+
