--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -55,6 +55,8 @@ html {
   font-size: 16px;
   line-height: 28px;
   margin-left: 80px;
+  color: #FFFFFF;
+  text-decoration: none;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
