--- a/src/stylesheets/style.sass
+++ b/src/stylesheets/style.sass
@@ -43,6 +43,8 @@ html
     font-size: 16px
     line-height: 28px
     margin-left: 80px
+    color: $color1
+    text-decoration: none
     transition: 0.3s
 .navigation-link a:hover
     color: $hover-color !important
